--- a/src/app/pages/funcionario/cursos-intersemestrales/inscribir-estudiantes/inscribir-estudiantes.component.html
+++ b/src/app/pages/funcionario/cursos-intersemestrales/inscribir-estudiantes/inscribir-estudiantes.component.html
@@ -98,7 +98,6 @@
               <span class="con-comprobante">
                 <mat-icon style="color: #4CAF50 !important;">check_circle</mat-icon>
                 Listo para inscripción
-                <br><small style="color: #4CAF50; font-weight: bold;">✅ Elegible</small>
               </span>
             </div>
           </td>
@@ -119,7 +118,7 @@
               <button mat-icon-button 
                       *ngIf="estudiante.tiene_inscripcion_formal"
                       (click)="confirmarInscripcion(estudiante)"
-                      matTooltip="Aceptar inscripción - Estudiante completó todos los requisitos"
+                      matTooltip="Confirmar inscripción oficial - El estudiante completó todos los requisitos y pago validado"
                       style="color: #4CAF50 !important;">
                 <mat-icon style="color: #4CAF50 !important;">check_circle</mat-icon>
               </button>
